// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.identity.roles;

import "apis/identity/roles/role.proto";

option go_package = "personal-website-v2/go-apis/identity/roles;roles";

// Proto file describing the User role service.

// The user role service definition.
service UserRoleService {
	// Gets all user's roles by the specified user ID.
    rpc GetAllRolesByUserId(GetAllRolesByUserIdRequest) returns (GetAllRolesByUserIdResponse) {}
}

// Request message for 'UserRoleService.GetAllRolesByUserId'.
message GetAllRolesByUserIdRequest {
    // The user ID.
    uint64 user_id = 1;
}

// Response message for 'UserRoleService.GetAllRolesByUserId'.
message GetAllRolesByUserIdResponse {
    // The roles.
    repeated Role roles = 1;
}
